Fixed con el scrollbar y la pag No autorizado

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -323,11 +323,6 @@ input[type=text]:placeholder, [type=password]:placeholder  {
   justify-content: center;
   } 
 
-div {
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
 @import '~ngx-toastr/toastr.css';
 
 
